<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<packaging>pom</packaging>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>be.vlaanderen.vip.mock</groupId>
	<artifactId>magda</artifactId>
	<version>0.27.0-SNAPSHOT</version>
	<name>magdaservice</name>
	<description>MAGDA diensten Mock voor afnemers</description>
	<properties>
		<java.version>19</java.version>
		<maven.compiler.source>19</maven.compiler.source>
		<maven.compiler.target>19</maven.compiler.target>
		<!-- Used for Docker image -->
		<magda-openjdk.version>19.0.2</magda-openjdk.version>
		<docker.image>magdamock.service</docker.image>
		<assertj-core.version>3.24.2</assertj-core.version>
		<commons-io.version>2.13.0</commons-io.version>
		<commons-lang3.version>3.12.0</commons-lang3.version>
		<dom4j.version>2.1.4</dom4j.version>
		<jackson-databind-nullable.version>0.2.6</jackson-databind-nullable.version>
		<jackson-dataformat-yaml.version>2.15.2</jackson-dataformat-yaml.version>
		<javax.json.version>1.1.4</javax.json.version>
		<log4j2.version>2.18.0</log4j2.version>
		<logstash.logback.version>7.3</logstash.logback.version>
		<lombok.version>1.18.28</lombok.version>
		<mapstruct-lombok.version>0.2.0</mapstruct-lombok.version>
		<mockito.version>5.3.1</mockito.version>
		<org.apache.wss4j.version>2.4.1</org.apache.wss4j.version>
		<spring-cloud.version>2022.0.3</spring-cloud.version>
		<springdoc.api>1.7.0</springdoc.api>
		<springfox-swagger2.version>3.0.0</springfox-swagger2.version>
		<testrunner.version>0.2.0</testrunner.version>
		<apache.httpcomponents.version>5.2.1</apache.httpcomponents.version>
		<sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco-aggregated/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
		<sonar.language>java</sonar.language>
	</properties>

	<profiles>
	  
	  <profile>
	    <id>artifactory</id>
	    <distributionManagement>
	      <repository>
		<id>central</id>
		<name>magda-public-release</name>
		<url>https://vlaamseoverheid.jfrog.io/vlaamseoverheid/magdamock-releases</url>
	      </repository>
	      <snapshotRepository>
		<id>snapshots</id>
		<name>magda-public-snapshot</name>
		<url>https://vlaamseoverheid.jfrog.io/vlaamseoverheid/magdamock-snapshots</url>
	      </snapshotRepository>
	    </distributionManagement>
	  </profile>

	  <profile>
	    <!-- This profile is enabled when running the Github pipeline -->
	    <id>github</id>
	    <distributionManagement>
	      <repository>
		<id>github</id>
		<name>GitHub Packages</name>
		<url>https://maven.pkg.github.com/Informatievlaanderen/MAGDA-Mock</url>
	      </repository>
	    </distributionManagement>
	  </profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.xmlunit</groupId>
			<artifactId>xmlunit-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.xmlunit</groupId>
			<artifactId>xmlunit-matchers</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<modules>
		<module>common</module>
		<module>signing</module>
		<module>magdaservice</module>
		<module>magdamock</module>
		<module>magdaconnector</module>
		<module>interfaces</module>
		<module>tester</module>
	</modules>

</project>
